# deposit_calculation

./: README.md  docker-compose.yml
app/: Dockerfile  pyproject.toml
app/src/: main.py  models.py
app/tests/: test_calculate_deposit.py  test_validation.py
